Syntax error while compilation OpenCL kernels (Cycles Render Engine): used type 'float' where floating point type is not allowed. #46906

Closed
opened 2015-12-01 13:08:54 +01:00 by Evgeny Mankov · 5 comments

System Information
Windows 7-10, AMD Radeon(TM) R7 Graphics (Spectre)

Blender Version
Broken: 2.76b f337fea
Worked: 2.72b - the last working

Short description of error
Error while compilation OpenCL kernels (Cycles Render Engine).
util_math.h:556:12: error: used type 'float' where floating point type is not allowed

      return (t)? a/t: a; 

OpenCL v1.1 s6.3.i says the condition cannot be a floating point type. C99 stands the same.

The correct Ternary Operator should be as follows:

      return (t != 0.0f)? a/t: a;

Exact steps for others to reproduce the error
1 option.
Compile Blender's Cycles OpenCL kernels by LLVM's clang.

2 option.
2.1. set GPU_HSAIL_ENABLE=1
2.2. Run Blender on AMD Radeon(TM) R7 Graphics; Spectre (CI-based or newer GPU) with the latest AMD drivers installed.
2.3. Select OpenCL as a Compute Device under "User Preferences".
2.4. Select "Cycles Render" as an Engine.
2.5. Select "GPU Compute" as a Device for rendering.
2.5. Render any image or animation.

Blender first of all will try to compile OpenCL kernels and the error will be reported.

**System Information** Windows 7-10, AMD Radeon(TM) R7 Graphics (Spectre) **Blender Version** Broken: 2.76b f337fea Worked: 2.72b - the last working **Short description of error** Error while compilation OpenCL kernels (Cycles Render Engine). util_math.h:556:12: error: used type 'float' where floating point type is not allowed ``` return (t)? a/t: a; ``` OpenCL v1.1 s6.3.i says the condition cannot be a floating point type. C99 stands the same. The correct Ternary Operator should be as follows: ``` return (t != 0.0f)? a/t: a; ``` **Exact steps for others to reproduce the error** 1 option. Compile Blender's Cycles OpenCL kernels by LLVM's clang. 2 option. 2.1. set GPU_HSAIL_ENABLE=1 2.2. Run Blender on AMD Radeon(TM) R7 Graphics; Spectre (CI-based or newer GPU) with the latest AMD drivers installed. 2.3. Select OpenCL as a Compute Device under "User Preferences". 2.4. Select "Cycles Render" as an Engine. 2.5. Select "GPU Compute" as a Device for rendering. 2.5. Render any image or animation. Blender first of all will try to compile OpenCL kernels and the error will be reported.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Evgeny_Mankov

Added subscriber: @Evgeny_Mankov

This issue was referenced by 8512e284a0

This issue was referenced by 8512e284a001fdf464488112f4d19d598d37342b
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by blender/cycles@e33bdeccf4

This issue was referenced by blender/cycles@e33bdeccf40f7fe228e19d13d725c805e08b8c30
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46906
No description provided.