Fix T46906: Cycles syntax error while compiling OpenCL kernels

The safe normalization was using a float as a condition, now the intended non-zero test is explicit.